# prototype

./: README.md
CCode/: C11Thread.cpp  C11Thread.h  Timer.cpp
CMakeExample/: CMakeLists.txt  README
CMakeExample/apps/: .CMakeLists.txt.swp  CMakeLists.txt  UnitTest.cpp
CMakeExample/base/: BaseData.cpp  BaseData.h  CMakeLists.txt  DetectorData.h  MeasurementData.h
QtExample/Processing/: Processing.pro  aqtcoords.cpp  aqtcoords.h  aqtglwidget.cpp  aqtglwidget.h  main.cpp  mainwindow.cpp  mainwindow.ui
QtExample/build-Processing-Desktop-Debug/: Makefile  Processing  moc_aqtglwidget.cpp  moc_mainwindow.cpp  ui_mainwindow.h
configFiles/dotfiles/: .gitconfig  .vimrc
opengl/: HelloWorld.cpp  Makefile
